--- a/css/main.css
+++ b/css/main.css
@@ -45,9 +45,20 @@ h1, h2, h3, h4, h5, h6 { font-family: Georgia, serif; }
   padding: 40px;
 }
 
+.site #bio {
+  border: 1px solid #ddd;
+  color: #666;
+  font-size: 0.8em;
+  font-style: italic;
+  line-height: 1.8em;
+  padding: 15px;
+}
+
 .site .posts a {
   border-bottom: 1px solid #eee;
+  color: #444;
   display: block;
+  font-weight: bold;
   padding: 15px 10px;
 }
 
@@ -56,9 +67,23 @@ h1, h2, h3, h4, h5, h6 { font-family: Georgia, serif; }
   text-decoration: none;
 }
 
-.site .posts a .meta {
+.site .posts a .title { padding: 0 5px 0 0; }
+.site .posts a .published-on {
   color: #aaa;
+  display: inline-block;
+  float: right;
   font-size: 0.8em;
+  font-weight: normal;
+}
+
+.site .posts .year {
+  border-bottom: 1px solid #eee;
+  color: #888;
+  font-family: Arial, serif;
+  font-size: 1em;
+  padding: 0 10px 5px 10px;
+  margin: 40px 0 0 0;
+  text-align: right;
 }
 
 .site .post h2.title {
@@ -121,4 +146,16 @@ hr {
   height: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.social-share { margin: 20px 0; }
+
+
+@media screen and (max-width: 820px) {
+  .container { width: 100%; }
+}
+
+@media screen and (max-width: 500px) {
+  .site .posts a .published-on { float: none; }
+  .site .posts .year { text-align: left; }
 }
