--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,5 +26,6 @@
       </div> <!-- /site -->
       <div class='footer'>Powered by <a href='http://jekyllrb.com'>Jekyll</a>.</div>
     </div> <!-- /container -->
+<script>var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-47495585-1"]);_gaq.push(["_trackPageview"]);(function(){var e=document.createElement("script");e.type="text/javascript";e.async=true;e.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)})()</script>
   </body>
 </html>
