--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,16 @@ layout: default
   {{ content }}
   </div>
 
+  <!-- AddThis Button BEGIN -->
+  <div class="addthis_toolbox addthis_floating_style addthis_counter_style" style="left: 25px; top: 150px;">
+    <a class="addthis_button_facebook_like" fb:like:layout="box_count"></a>
+    <a class="addthis_button_tweet" tw:count="vertical"></a>
+    <a class="addthis_button_google_plusone" g:plusone:size="tall"></a>
+  </div>
+  <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52e778d11827171f"></script>
+  <!-- AddThis Button END -->
+
   <div class='social-share'>
     <a href="http://twitter.com/share" class="twitter-share-button" data-url="{{ site.url }}{{ page.url }}" data-text="{{ page.title }}" data-via='nithinbekal' data-count="horizontal">Share on Twitter</a>
   </div>
@@ -17,7 +27,7 @@ layout: default
   <div id="disqus_thread"></div>
   <script type="text/javascript">
       /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-      var disqus_shortname = 'nithinbekal'; // required: replace example with your forum shortname
+      var disqus_shortname = 'jaseemts'; // required: replace example with your forum shortname
 
       /* * * DON'T EDIT BELOW THIS LINE * * */
       (function() {
