--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,7 @@
       <div class='header'>
         <h1 class='title'><a href="/">{{ site.name }}</a></h1>
         <span class='links align-right'>
-          <a href='http://twitter.com/nithinbekal' target='_blank'>Tweets</a>
-          <a href='http://github.com/nithinbekal' target='_blank'>Code</a>
+          <a href='http://twitter.com/jaseemts' target='_blank'>Tweets</a>
         </span>
       </div>
       <div class='site'>
